<resources>
    <string name="app_name">Lecture Lens AUEB</string>
    <string name="lecture_lens">LectureLens</string>
    <string name="transparency_subtitle">Transparency in your Studies</string>
    <string name="welcome_to_lecture_lens">Welcome to LectureLens</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="forgot_my_password">forgot my password</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="create_account">Create Account</string>
    <string name="academic_email_hint">use your academic email to sign up</string>
    <string name="username">username</string>
    <string name="already_have_account">do you already have an account?</string>
    <string name="sign_in_here">sign in here</string>
    <string name="hello_giorgos">Hello, Giorgos</string>
    <string name="search_hint">search course/professor</string>
    <string name="hci_course_name">Human - Computer Interaction</string>
    <string name="professor_name">Professor: Andreas Vasilakis</string>
    <string name="difficulty_label">Difficulty: 3/5</string>
    <string name="hours_label">Hours per week: 3</string>
    <string name="course_description">Very interesting course but needs studying to...</string>
    <string name="rating_text">4,5</string>
    <string name="search_page_title">Search for Courses or Professors</string>
    <string name="search_bar_hint">course code, name or professor</string>
    <string name="recommended_courses">Recommended Courses for you</string>
    <string name="recommended_professors">Recommended Professors</string>
    <string name="rating">Rating</string>
    <string name="difficulty">Difficulty</string>
    <string name="hours_wk">Hours/wk</string>
    <string name="view">View</string>
    <string name="course_code_demo">INF144</string>
    <string name="prof_dept_demo">Department of Informatics @ aueb</string>
    <string name="filters">Filters</string>
    <string name="clear_all">Clear All</string>
    <string name="apply">apply</string>
    <string name="hours_per_week">Hours per week</string>
    <string name="my_profile">My profile</string>
    <string name="giorgos_papadopoulos">Giorgos Papadopoulos</string>
    <string name="student_email_demo">p3333333@aueb.gr</string>
    <string name="years_member">years member</string>
    <string name="reviews_count">reviews</string>
    <string name="manage_my_reviews">Manage my reviews</string>
    <string name="change_my_password">Change my password</string>
    <string name="logout">logout</string>
    <string name="courses_count">courses</string>
    <string name="see_my_reviews">See my reviews</string>
    <string name="rating_label">rating</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="cancel">Cancel</string>
    <string name="search_demo_1">inf144</string>
    <string name="search_demo_2">vasilakis</string>
    <string name="search_demo_3">human computer interaction</string>
    <string name="search_demo_4">operating systems</string>
    <string name="back">&lt; Back</string>
    <string name="based_on_reviews">Based on %1$d reviews</string>
    <string name="write_a_review">write a review</string>
    <string name="student_reviews">Student Reviews</string>
    <string name="anonymous_user">anonymous user</string>
    <string name="report">Report</string>
    <string name="review_demo_text">Amazing lesson, really easy to understand and very useful projects</string>
    <string name="review_date_demo">March 12, 2025</string>
    <string name="hci_rating_demo">4.5</string>
    <string name="hci_difficulty_demo">3.2 / 5</string>
    <string name="hci_hours_demo">4</string>
    <string name="hci_reviews_full">⭐⭐️⭐️⭐️⭐️️ Based on 120 reviews</string>
    <string name="informatics_dept">Informatics Department</string>
    <string name="courses">Courses</string>
    <string name="my_reviews">My Reviews</string>
    <string name="based_on_count">Based on %1$d reviews</string>
    <string name="professor_review">Professor Review</string>
    <string name="rate_professor">How would you rate the professor?</string>
    <string name="your_opinion_optional">Your opinion! (Optional)</string>
    <string name="review_placeholder">What did you like? What could have been better? Share your experience with your fellow students...</string>
    <string name="anonymous_submission">Anonymous Submission</string>
    <string name="anon_info">Your name will not be shown to others.</string>
    <string name="submit_review">submit review</string>
    <string name="course_review">Course Review</string>
    <string name="rate_course">How would you rate the course?</string>
    <string name="how_hard">How hard was the course?</string>
    <string name="hours_studying">Hours of studying per week</string>
    <string name="very_easy">1 = Very Easy</string>
    <string name="very_hard">5 = Very Hard</string>
    <string name="four_hours">4 hours</string>
    <string name="hci_full_demo">INF144 - Human - Computer Interaction</string>
    <string name="thank_you">Thank you!</string>
    <string name="submission_success">Your review has been successfully submitted!</string>
    <string name="return_to_home">return to home</string>
    <string name="view_my_review">view my reviews</string>
    <string name="hci_rating_summary">3.5</string>
    <string name="hci_review_text_demo">Very helpful professor and very invested in the courses.</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">current password</string>
    <string name="new_password">new password</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="save_changes">save changes</string>
    <string name="password_hint">password must have at least 8 characters</string>
    <string name="password_changed_success">Password changed successfully</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_review">Edit Review</string>
    <string name="delete_review_title">Delete Review?</string>
    <string name="delete_review_message">Are you sure? This action cannot be undone.</string>
    <string name="professor_email_demo">professoremail@aueb.gr</string>
    <string name="admin_title">LectureLens - Admin</string>
    <string name="pending_reports">Pending Reports</string>
    <string name="deleted_reviews">Deleted Reviews</string>
    <string name="ignore">Ignore</string>
    <string name="reported_times">Reported %1$d times</string>
    <string name="reported_3_times">Reported 3 times</string>
    <string name="report_demo_text">This course is ****** difficult</string>
    <string name="pending_reports_count">12</string>
    <string name="deleted_reviews_count">45</string>
    <string name="metadata">Semester 8 | 6 ECTS</string>
    <string name="return_review_page">return to review page</string>
    <string name="are_you_student">Are you a student?</string>
    <string name="teacher_text">If you are a professor turn this toggle off!</string>
    <string name="full_name">full name</string>
    <string name="welcome_message">"Hello, "</string>
</resources>
